[FIX_EFESTO_FIRST_CACHE_POPULATION] Fix initialization of firstLevelCache so that it stores a mutable list (#4841)